--- a/index.html
+++ b/index.html
@@ -369,10 +369,32 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/img3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/img3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="" ><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/img4.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/img4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="" ><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/img5.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/img5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="" ><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -424,6 +446,24 @@
             </div>
           </div>
         </div>
+
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/ProyectoCSS.png" class="width=90px img-fluid" alt="">
+            
+            <div class="portfolio-info">
+              <h4>Proyecto de Peliculas estilo Netflix</h4>
+              <a href="https://youtu.be/hvHtyXRf6IE" target="_blank">Video</a>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ProyectoCSS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
 
       </div>
 
